--- a/src/main/webapp/admin-template-list/program-administration-list.html
+++ b/src/main/webapp/admin-template-list/program-administration-list.html
@@ -12,12 +12,12 @@
     		<tr ng-repeat="program in vm.programs">
     			<td>{{program.name}}</td>
     			<td>
-    				<div ng-if="program.template">
+    				<div ng-if="program.$template">
                         <i class="fa fa-check"></i>
                         {{'template.configured' | message}}
-                        <a ng-if="vm.canConfigureTemplates()" ng-click="vm.goToTemplate(program.template.id)">({{'link.edit' | message}})</a>
+                        <a ng-if="vm.canConfigureTemplates()" ng-click="vm.goToTemplate(program.$template.id)">({{'link.edit' | message}})</a>
                 	</div>
-                    <div ng-if="!program.template">
+                    <div ng-if="!program.$template">
                         <div>{{'template.create' | message}}</div>
     				</div>
     			</td>
