fixed admin tempalte screen by removing track by from options select

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -48,7 +48,7 @@
                         </td>
                         <td>
                             <div ng-if="column.columnDefinition.options.length > 0">
-                                <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options track by option.id"></select>
+                                <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options"></select>
                             </div>
                             <div ng-if="!column.$isValid(vm.template.columnsMap)" class="error">{{vm.errorMessage(column)}}</div>
                         </td>
