--- a/src/main/webapp/requisition-view/convert-to-order-modal.html
+++ b/src/main/webapp/requisition-view/convert-to-order-modal.html
@@ -1,14 +1,14 @@
-<form name="convertForm" ng-submit="convertForm.$valid && convertRnr()" novalidate>
+<form name="convertForm" ng-submit="convertForm.$valid && vm.convertRnr()" novalidate>
     <div class="form-group">
         <label for="searchWarehouses">{{'label.filter.warehouses' | message}}</label>
-        <input id="searchWarehouses" type="text" ng-model="searchText"/>
+        <input id="searchWarehouses" type="text" ng-model="vm.searchText"/>
     </div>
     <fieldset class="form-group depots">
         <legend>{{'requisition.convertToOrder.pickDepot' | message}}</legend>
-        <label ng-repeat="depot in requisitionWithDepots.supplyingDepots |
+        <label ng-repeat="depot in vm.requisitionWithDepots.supplyingDepots |
                filter:searchText"
                class="radio" >
-            <input type="radio" name="radioBtn" ng-value="depot.id" ng-model="requisitionWithDepots.requisition.supplyingFacility" required/>
+            <input type="radio" name="radioBtn" ng-value="depot.id" ng-model="vm.requisitionWithDepots.requisition.supplyingFacility" required/>
             {{depot.name}}
         </label>
         <div class="alert is-error" ng-if="convertForm.$invalid && convertForm.$submitted">
