OLMIS-1525: Added periods to average input in template configuration
*Also fixed average consumption calculations

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -47,10 +47,13 @@
                             </div>
                         </td>
                         <td>
+                            <div ng-if="vm.isAverageConsumption(column)">
+                                <input type="text" ng-model="vm.template.numberOfPeriodsToAverage" class="form-control input-sm"/>
+                            </div>
                             <div ng-if="column.columnDefinition.options.length > 0">
                                 <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options"></select>
                             </div>
-                            <div ng-if="!column.$isValid(vm.template.columnsMap)" class="error">{{vm.errorMessage(column)}}</div>
+                            <div ng-if="!column.$isValid(vm.template)" class="error">{{vm.errorMessage(column)}}</div>
                         </td>
                     <dnd-nodrag>
                 </tr>
