OLMIS-1519 FEOLMIS-868: Updated message key to use camelCase

--- a/src/main/webapp/requisition-view/convert-to-order-modal.html
+++ b/src/main/webapp/requisition-view/convert-to-order-modal.html
@@ -12,7 +12,7 @@
             {{depot.name}}
         </label>
         <div class="alert is-error" ng-if="convertForm.$invalid && convertForm.$submitted">
-            {{ 'msg.no.supplyingDepot.selected' | message }}
+            {{ 'msg.noSupplyingDepotSelected' | message }}
         </div>
     </fieldset>
     <button class="convert-rnr" type="submit">{{'button.convert.to.order' | message}}</button>
