--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -27,7 +27,6 @@
                 <label for="programListMyFacility">{{'label.program' | message}}</label>
                 <select id="programListMyFacility" ng-model="vm.selectedProgramId"
                         ng-options="program.id as program.name for program in vm.programs"
-                        ng-change="vm.refreshGridData()"
                         placeholder="{{'label.select.program' | message}}">
                 </select>
             </fieldset>
@@ -45,26 +44,26 @@
                 </label>
                 <select id="supervisedFacilityName" ng-model="vm.selectedFacilityId"
                         ng-options="facility.id as facility.name for facility in vm.facilities | unique:'id'"
-                        ng-change="vm.refreshGridData()"
                         placeholder="{{'label.select.facility' | message}}">
                 </select>
             </fieldset>
             <fieldset>
                 <legend>{{'label.requisition.type' | message}}</legend>
                 <label>
-                    <input type="radio" ng-model="vm.emergency" ng-value="false"
-                           ng-change="vm.refreshGridData()"/>
+                    <input type="radio" ng-model="vm.emergency" ng-value="false"/>
                     {{'requisition.type.regular' | message}}
                 </label>
                 <label>
-                    <input type="radio" ng-model="vm.emergency" ng-value="true"
-                           ng-change="vm.refreshGridData()"/>
+                    <input type="radio" ng-model="vm.emergency" ng-value="true"/>
                     {{'requisition.type.emergency' | message}}
                 </label>
             </fieldset>
             <input class="btn btn-primary" type="submit" value="{{'button.search'|message}}"/>
         </form>
-        <table ng-show="vm.selectedProgramId && vm.selectedFacilityId && vm.periodGridData && !(vm.periodGridData.length == 0)">
+        <table ng-show="vm.periodGridData">
+            <caption ng-if="!vm.periodGridData.length">
+                {{'msg.no.period.available' | message}}
+            </caption>
             <thead>
                 <tr>
                     <th>{{'label.periods' | message}}</th>
