OLMIS-1084: Use requisition's methods to determine its status
*Also changed full supply method that determines if the column name is 'Skipped'

--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -3,7 +3,7 @@
 		<thead>
 			<tr>
 				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.canChangeOrder}">{{column.label}}
-					<div ng-if="vm.isColumnSkip(column)">
+					<div ng-if="vm.isSkipColumn(column)">
 						<a href="" ng-click="vm.skipAll()">{{'requisition.lineItem.skip.all' | message}}</a> |
 						<a href="" ng-click="vm.unskipAll()">{{'requisition.lineItem.skip.none' | message}}</a>
 					</div>
