OLMIS-1525: Number of periods to average can be only positive integer

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -49,7 +49,7 @@
                         <td>
                             <div ng-if="vm.isAverageConsumption(column)">
                                 <label for="numberOfPeriods">{{'msg.template.numberOfPeriodsToAverage' | message}}</label>
-                                <input type="text" id="numberOfPeriods" ng-model="vm.template.numberOfPeriodsToAverage" class="form-control input-sm"/>
+                                <input positive-integer type="text" id="numberOfPeriods" ng-model="vm.template.numberOfPeriodsToAverage" class="form-control input-sm"/>
                             </div>
                             <div ng-if="column.columnDefinition.options.length > 0">
                                 <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options"></select>
