--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -70,7 +70,7 @@
                     <th>{{'period.header.startDate' | message}}</th>
                     <th>{{'period.header.endDate' | message}}</th>
                     <th>{{'label.rnr.status' | message}}</th>
-                    <th></th>
+                    <th class="sticky"></th>
                 </tr>
             </thead>
             <tbody>
