OLMIS-1550: add orders and pod view modules

--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -13,7 +13,7 @@
                 <th>{{'label.period.start.date' | message}}</th>
                 <th>{{'label.period.end.date' | message}}</th>
                 <th>{{'label.date.submitted' | message}}</th>
-                <th>{{'requisition.type.emergency' | message}}</th>
+                <th>{{'msg.emergency' | message}}</th>
             </tr>
         </thead>
         <tbody>
