--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -30,8 +30,8 @@
 						<th>{{'label.period.start.date' | message}}</th>
 						<th>{{'label.period.end.date' | message}}</th>
 						<th>{{'label.date.modified' | message}}</th>
-						<th>{{'label.supplying.depot' | message}}</th>
-						<th>{{'requisition.type.emergency' | message}}</th>
+						<th>{{'label.supplyingDepot' | message}}</th>
+						<th>{{'msg.emergency' | message}}</th>
 					</tr>
 				</thead>
 				<tbody>
