--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -51,11 +51,11 @@
                 <legend>{{'label.requisition.type' | message}}</legend>
                 <label>
                     <input type="radio" ng-model="vm.emergency" ng-value="false"/>
-                    {{'requisition.type.regular' | message}}
+                    {{'msg.regular' | message}}
                 </label>
                 <label>
                     <input type="radio" ng-model="vm.emergency" ng-value="true"/>
-                    {{'requisition.type.emergency' | message}}
+                    {{'msg.emergency' | message}}
                 </label>
             </fieldset>
             <input class="btn btn-primary" type="submit" value="{{'button.search'|message}}"/>
