--- a/src/main/webapp/requisition-view/header.html
+++ b/src/main/webapp/requisition-view/header.html
@@ -22,7 +22,7 @@
         <dd>{{vm.requisition.facility.geographicZone.name}}</dd>
         <dt ng-if="requisition.facility.geographicZone.parent.name">{{'label.province' | message}}</dt>
         <dd ng-if="requisition.facility.geographicZone.parent.name">{{vm.requisition.facility.geographicZone.parent.name}}</dd>
-        <dt>{{'label.facility.reportingPeriod' | message}}</dt>
+        <dt>{{'label.reportingPeriod' | message}}</dt>
         <dd>{{vm.periodDisplayName()}}</dd>
     </dl>
 </aside>
