--- a/src/main/webapp/order-pod-view/pod-view.html
+++ b/src/main/webapp/order-pod-view/pod-view.html
@@ -1,28 +1,29 @@
 <div class="page">
     <ng-include src="'order-pod-view/pod-header.html'"></ng-include>
-    <div class="product-grid">
+    <div class="product-grid table-container">
     	<table table-pinned-columns>
     		<thead>
     			<tr>
-    				<th ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.canChangeOrder}">{{column.label}}</th>
-                    <th>{{'msg.productName' | message}}</th>
-                    <th>{{'msg.productUnit' | message}}</th>
-                    <th>{{'msg.packsToShip' | message}}</th>
-                    <th>{{'msg.quantityShipped' | message}}</th>
-                    <th>{{'msg.quantityReceived' | message}}</th>
-                    <th>{{'msg.quantityReturned' | message}}</th>
-                    <th>{{'msg.replacedProductCode' | message}}</th>
-                    <th>{{'msg.notes' | message}}</th>
+                    <th>{{'label.productName' | message}}</th>
+                    <th>{{'label.productUnit' | message}}</th>
+                    <th>{{'label.packsToShip' | message}}</th>
+                    <th>{{'label.quantityShipped' | message}}</th>
+                    <th>{{'label.quantityReceived' | message}}</th>
+                    <th>{{'label.quantityReturned' | message}}</th>
+                    <th>{{'label.replacedProductCode' | message}}</th>
+                    <th>{{'label.notes' | message}}</th>
     			</tr>
     		</thead>
-    		<tbody>
-    			<tr ng-repeat="lineItem in vm.pod.proofOfDeliveryLineItems">
-                    <td>{{lineItem.orderLineItem.$orderableProduct.name}}</td>
-                    <td>{{lineItem.orderLineItem.$orderableProduct.dispensable.dispensingUnit}}</td>
+    		<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.categories">
+    			<tr ng-class="{'invalid-row': !vm.pod.$isLineItemValid(lineItem)}"
+                    ng-repeat="lineItem in lineItems | orderBy : 'orderLineItem.orderableProduct.name'">
+                    <td>{{lineItem.orderLineItem.orderableProduct.name}}</td>
+                    <td>{{lineItem.orderLineItem.orderableProduct.dispensable.dispensingUnit}}</td>
                     <td>{{lineItem.packToShip}}</td>
                     <td>{{lineItem.quantityShipped}}</td>
                     <td>
-                        <input positive-integer type="text" ng-model="lineItem.quantityReceived" required/>
+                        <input positive-integer type="text" ng-model="lineItem.quantityReceived"/>
+                        <div ng-if="lineItem.quantityReceived === null || lineItem.quantityReceived === undefined" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
                     </td>
                     <td>
                         <input positive-integer type="text" ng-model="lineItem.quantityReturned"/>
@@ -35,5 +36,6 @@
     		</tbody>
     	</table>
     </div>
+    <ng-include src="'order-pod-view/pod-footer.html'"></ng-include>
 </div>
 <ng-include src="'order-pod-view/pod-toolbar.html'"></ng-include>
