--- a/src/main/webapp/requisition-non-full-supply/add-product-modal.html
+++ b/src/main/webapp/requisition-non-full-supply/add-product-modal.html
@@ -5,7 +5,7 @@
 		</select>
 	</div>
 	<div class="form-group">
-		<label for="product">{{'label.product.name' | message}}</label>
+		<label for="product">{{'label.productName' | message}}</label>
 		<select class="form-control" ng-model="selectedProduct" ng-disabled="!selectedCategory" ng-options="lineItem.productName for lineItem in selectedCategory.lineItems | filter:productVisible" required>
 		</select>
 	</div>
