OLMIS-1550: remove $ from pod methods

--- a/src/main/webapp/order-pod-view/pod-toolbar.html
+++ b/src/main/webapp/order-pod-view/pod-toolbar.html
@@ -1,6 +1,6 @@
 <div id="action_buttons" class="action-buttons">
     <div class="form-cell button-row">
-        <button id="savePodButton" ng-disabled="!vm.pod.$isValid()" ng-click="vm.savePod()" class="btn btn-default save-button">{{'button.sync' | message}}</button>
-        <button id="submitPodButton" ng-disabled="!vm.pod.$isValid()" ng-click="vm.submitPod()" class="btn btn-primary primary-action">{{'button.submit' | message}}</button>
+        <button id="savePodButton" ng-disabled="!vm.pod.isValid()" ng-click="vm.savePod()" class="btn btn-default save-button">{{'button.sync' | message}}</button>
+        <button id="submitPodButton" ng-disabled="!vm.pod.isValid()" ng-click="vm.submitPod()" class="btn btn-primary primary-action">{{'button.submit' | message}}</button>
     </div>
 </div>
