--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -10,60 +10,60 @@
                 </dd>
             </dl>
         </aside>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>{{'template.header.display' | message}}</th>
-                    <th></th>
-					<th>{{'template.header.label' | message}}</th>
-					<th>{{'template.header.source' | message}}</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody dnd-list="vm.template.columnsMap"
-                dnd-drop="vm.dropCallback(event, index, item)">
-                <tr ng-repeat="column in vm.template.columnsMap | orderObjectBy:'displayOrder'"
-                    dnd-draggable="column"
-                    dnd-disable-if="!column.columnDefinition.canChangeOrder"
-                    dnd-effect-allowed="move"
-                    ng-class="{pinned: !column.columnDefinition.canChangeOrder, moveable: column.columnDefinition.canChangeOrder}">
-                    <dnd-nodrag>
-                        <td>
-                            <input type="checkbox" ng-model="column.isDisplayed" ng-disabled="column.columnDefinition.isDisplayRequired">
-                        </td>
-                        <td>
-                            <div class="circle">
-                                <div class="inner-circle">{{column.indicator}}</div>
-                            </div>
-                        </td>
-                        <td>
-                            <input disable-drag type="text" ng-model="column.label" class="form-control input-sm"/>
-                        </td>
-                        <td>
-                            <div ng-if="!vm.canChangeSource(column.columnDefinition)">{{vm.sourceDisplayName(column.source)}}</div>
-                            <div ng-if="vm.canChangeSource(column.columnDefinition)">
-                                <select ng-model="column.source" ng-options="source as vm.sourceDisplayName(source) for source in column.columnDefinition.sources"></select>
-                            </div>
-                        </td>
-                        <td>
-                            <div ng-if="vm.isAverageConsumption(column)">
-                                <label for="numberOfPeriods">{{'msg.template.numberOfPeriodsToAverage' | message}}</label>
-                                <input positive-integer type="text" id="numberOfPeriods" ng-model="vm.template.numberOfPeriodsToAverage" class="form-control input-sm"/>
-                            </div>
-                            <div ng-if="column.columnDefinition.options.length > 0">
-                                <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options"></select>
-                            </div>
-                            <div ng-if="!column.$isValid(vm.template)" class="error">{{vm.errorMessage(column)}}</div>
-                        </td>
-                    <dnd-nodrag>
-                </tr>
-                <tr class="dndPlaceholder">
-                    <td></td><td></td><td></td><td></td><td></td>
-                </tr>
-            </tbody>
-        </table>
-
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>{{'template.header.display' | message}}</th>
+                        <th></th>
+    					<th>{{'template.header.label' | message}}</th>
+    					<th>{{'template.header.source' | message}}</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody dnd-list="vm.template.columnsMap"
+                    dnd-drop="vm.dropCallback(event, index, item)">
+                    <tr ng-repeat="column in vm.template.columnsMap | orderObjectBy:'displayOrder'"
+                        dnd-draggable="column"
+                        dnd-disable-if="!column.columnDefinition.canChangeOrder"
+                        dnd-effect-allowed="move"
+                        ng-class="{pinned: !column.columnDefinition.canChangeOrder, moveable: column.columnDefinition.canChangeOrder}">
+                        <dnd-nodrag>
+                            <td>
+                                <input type="checkbox" ng-model="column.isDisplayed" ng-disabled="column.columnDefinition.isDisplayRequired">
+                            </td>
+                            <td>
+                                <div class="circle">
+                                    <div class="inner-circle">{{column.indicator}}</div>
+                                </div>
+                            </td>
+                            <td>
+                                <input disable-drag type="text" ng-model="column.label" class="form-control input-sm"/>
+                            </td>
+                            <td>
+                                <div ng-if="!vm.canChangeSource(column.columnDefinition)">{{vm.sourceDisplayName(column.source)}}</div>
+                                <div ng-if="vm.canChangeSource(column.columnDefinition)">
+                                    <select ng-model="column.source" ng-options="source as vm.sourceDisplayName(source) for source in column.columnDefinition.sources"></select>
+                                </div>
+                            </td>
+                            <td>
+                                <div ng-if="vm.isAverageConsumption(column)">
+                                    <label for="numberOfPeriods">{{'msg.template.numberOfPeriodsToAverage' | message}}</label>
+                                    <input positive-integer type="text" id="numberOfPeriods" ng-model="vm.template.numberOfPeriodsToAverage" class="form-control input-sm"/>
+                                </div>
+                                <div ng-if="column.columnDefinition.options.length > 0">
+                                    <select ng-model="column.option" ng-options="option as option.optionLabel for option in column.columnDefinition.options"></select>
+                                </div>
+                                <div ng-if="!column.$isValid(vm.template)" class="error">{{vm.errorMessage(column)}}</div>
+                            </td>
+                        <dnd-nodrag>
+                    </tr>
+                    <tr class="dndPlaceholder">
+                        <td></td><td></td><td></td><td></td><td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 <div id="action_buttons" class="action-buttons">
