OLMIS-1550: notes input now accepts string values

--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -30,7 +30,7 @@
                     </td>
                     <td>{{lineItem.replacedProductCode}}</td>
                     <td>
-                        <input positive-integer type="text" ng-model="lineItem.notes"/>
+                        <input type="text" ng-model="lineItem.notes"/>
                     </td>
     			</tr>
     		</tbody>
