removed unnecessary margin in template view table

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -10,7 +10,7 @@
                 </dd>
             </dl>
         </aside>
-        <div class="table-container">
+        <div class="template-container">
             <table>
                 <thead>
                     <tr>
