--- a/src/main/webapp/openlmis-navigation/navigation.html
+++ b/src/main/webapp/openlmis-navigation/navigation.html
@@ -1,8 +1,7 @@
-<ul>
-    <li ng-repeat="state in vm.states" ng-class="{'dropdown':vm.hasChildren(state), 'dropdown-submenu':vm.isSubmenu(state)}" uib-dropdown ng-if="vm.shouldDisplay(state)" offline>
+<ul >
+    <li ng-repeat="state in vm.states" ng-class="{'dropdown':vm.hasChildren(state), 'dropdown-submenu':vm.isSubmenu(state)}" uib-dropdown ng-if="vm.shouldDisplay(state)">
         <a ng-if="vm.hasChildren(state)" class="dropdown-toggle" uib-dropdown-toggle>{{state.label | message}}</a>
-        <a ng-if="!vm.hasChildren(state) && (state.isOffline || !isOffline)" ui-sref="{{state.name}}" >{{state.label | message}}</a>
-        <a ng-if="!vm.hasChildren(state) && (!state.isOffline && isOffline)" class="disabled is-offline" >{{state.label | message}}</a>
+        <a ng-if="!vm.hasChildren(state)" offline ng-class="{'is-offline':(!vm.isOffline(state) && isOffline)}" ng-disabled="(!vm.isOffline(state) && isOffline)" ui-sref="{{state.name}}" >{{state.label | message}}</a>
         <openlmis-navigation ng-if="vm.hasChildren(state)" class="dropdown-menu" uib-dropdown-menu states="state.children"></openlmis-navigation>
     </li>
 </ul>
