OLMIS-1549: Added formNovalidate directive

--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -1,7 +1,7 @@
 <div class="page">
     <h2>{{'label.initiate.requisition' | message}}</h2>
     <section class="table-container">
-        <form name="initiateForm" ng-submit="initiateForm.$valid && vm.loadPeriods()" novalidate>
+        <form name="initiateForm" ng-submit="initiateForm.$valid && vm.loadPeriods()">
             <fieldset>
                 <legend>{{'label.requisition.facilityType' | message}}</legend>
                 <label>
