--- a/src/main/webapp/requisition-view/convert-to-order-modal.html
+++ b/src/main/webapp/requisition-view/convert-to-order-modal.html
@@ -1,4 +1,4 @@
-<form name="convertForm" ng-submit="convertForm.$valid && vm.convertRnr()" novalidate>
+<form name="convertForm" ng-submit="convertForm.$valid && vm.convertRnr()">
     <div class="form-group">
         <label for="searchWarehouses">{{'label.filter.warehouses' | message}}</label>
         <input id="searchWarehouses" type="text" ng-model="vm.searchText"/>
