OLMIS-1099: Requisition endpoints should be usable without hitting Requisition Template endpoints

--- a/src/main/webapp/requisition-view/requisition-view.html
+++ b/src/main/webapp/requisition-view/requisition-view.html
@@ -11,7 +11,7 @@
     <ng-include src="'requisition-view/header.html'"></ng-include>
     <ul class="nav nav-tabs">
       <li ui-sref-active="active" role="presentation"><a ui-sref="requisitions.requisition.fullSupply">{{'label.full.supply.products' | message}}</a></li>
-      <li ui-sref-active="active" ng-if="vm.requisition.$template.showNonFullSupplyTab" role="presentation"><a ui-sref="requisitions.requisition.nonFullSupply">{{'label.non.full.supply.products' | message}}</a></li>
+      <li ui-sref-active="active" ng-if="vm.requisition.template.showNonFullSupplyTab" role="presentation"><a ui-sref="requisitions.requisition.nonFullSupply">{{'label.non.full.supply.products' | message}}</a></li>
     </ul>
     <div ui-view=""></div>
     <requisition-summary requisition="vm.requisition"></requisition-summary>
