--- a/src/main/webapp/requisition-view/header.html
+++ b/src/main/webapp/requisition-view/header.html
@@ -7,7 +7,9 @@
   ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
-<h2>{{'label.requisition' | message}} {{vm.requisition.program.name}} ({{vm.requisition.facility.type.name}})</h2>
+<h2>{{'label.requisition' | message}} {{vm.requisition.program.name}} ({{vm.requisition.facility.type.name}})
+    <a class="btn btn-print-rnr" openlmis-download="{{vm.getPrintUrl()}}" target="_blank">{{'button.print' | message}}</a>
+</h2>
 <aside class="requisition-info">
     <div class="requisition-type" ng-class="{'emergency': vm.requisition.emergency, 'regular': !vm.requisition.emergency}">
         <span openlmis-message="vm.requisitionType"></span>
