--- a/src/main/webapp/requisition-view/requisition-view.html
+++ b/src/main/webapp/requisition-view/requisition-view.html
@@ -7,7 +7,10 @@
   ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
   ~ You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info@OpenLMIS.org. 
   -->
-<div class="page">
+<div class="page requisition-view">
+    <h2>{{'label.requisition' | message}} {{vm.requisition.program.name}} ({{vm.requisition.facility.type.name}})
+        <a class="btn btn-primary" openlmis-download="{{vm.getPrintUrl()}}" target="_blank">{{'button.print' | message}}</a>
+    </h2>
     <ng-include src="'requisition-view/header.html'"></ng-include>
     <ul class="nav nav-tabs">
       <li ui-sref-active="active" role="presentation"><a ui-sref="requisitions.requisition.fullSupply">{{'label.full.supply.products' | message}}</a></li>
