--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -1,5 +1,5 @@
 <div class="page approval-list">
-    <h2 openlmis-message="label.approve.requisitions"></h2>
+    <h2>{{'label.approve.requisitions' | message}}</h2>
     <div class="table-container">
         <table ng-if="vm.filteredRequisitions">
             <caption ng-if="!vm.filteredRequisitions.length">
