--- a/src/main/webapp/requisition-convert-to-order/convert-to-order-toolbar.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order-toolbar.html
@@ -1,3 +1,3 @@
 <div class="toolbar">
-    <button type="button" class="convert-to-order"><span openlmis-message="link.requisitions.convertToOrder"></span></button>
+    <button type="button" class="convert-to-order"><span>{{'link.requisitions.convertToOrder' | message}}</span></button>
 </div>
