--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
@@ -1,4 +1,4 @@
-<label openlmis-message="label.add.loss.adjustment"></label>
+<label>{{'label.add.loss.adjustment' | message}}</label>
 <form class="form-filter" ng-submit="vm.addAdjustment()">
     <div class="form-group">
         <label for="reason">{{'label.equipment.maintenance.request.reason' | message}}</label>
