--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 <html lang="en" ng-app="openlmis" manifest="manifest.appcache" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
-    <title openlmis-message="app.title"></title>
+    <title>{{'app.title' | message}}</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="openlmis.css">
     <script type="text/javascript" src="openlmis.js"></script>
