--- a/src/main/webapp/openlmis-404/404.html
+++ b/src/main/webapp/openlmis-404/404.html
@@ -1,6 +1,6 @@
 <div class="not-found-page">
     <h2>
-    	<em openlmis-message="label.page.not.found"></em>
-    	<span openlmis-message="error.page.not.found"></span>
+    	<em>{{'label.page.not.found' | message}}</em>
+    	<span>{{'error.page.not.found' | message}}</span>
     </h2>
 </div>
