--- a/src/main/webapp/openlmis-modal/alert.html
+++ b/src/main/webapp/openlmis-modal/alert.html
@@ -5,4 +5,4 @@
 		<div class="alert-message-additional">{{additionalMessage | message}}</div>
 	</div>
 </div>
-<footer openlmis-message="msg.alert.modal.footer"></footer>
+<footer>{{'msg.alert.modal.footer' | message}}</footer>
