--- a/src/main/webapp/openlmis-user/profile.html
+++ b/src/main/webapp/openlmis-user/profile.html
@@ -9,17 +9,17 @@
   -->
 
 <div class="page profile">
-    <h2 openlmis-message="label.basicInformation"></h2>
+    <h2>{{'label.basicInformation' | message}}</h2>
     <dl>
-        <dt openlmis-message="create.user.firstName"></dt>
+        <dt>{{'create.user.firstName' | message}}</dt>
         <dd>{{userProfile.firstName}}<dd>
     </dl>
     <dl>
-        <dt openlmis-message="create.user.lastName"></dt>
+        <dt>{{'create.user.lastName' | message}}</dt>
         <dd>{{userProfile.lastName}}<dd>
     </dl>
     <dl>
-        <dt openlmis-message="create.user.email"></dt>
+        <dt>{{'create.user.email' | message}}</dt>
         <dd>{{userProfile.email}}<dd>
     </dl>
 </div>
