--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -81,12 +81,12 @@
                     <td>{{period.rnrStatus}}</td>
                     <td class="sticky">
                         <input id="proceedButton" type="button" ng-click="vm.initRnr(period)"
-                               openlmis-message="button.proceed" class="btn btn-primary grid-btn"
-                               ng-show="{{period.activeForRnr}}"/>
+                               value="{{'button.proceed'| message}}" class="btn btn-primary grid-btn"
+                               ng-show="period.activeForRnr"/>
                     </td>
                 </tr>
             </tbody>
         </table>
     </section>
-    <div ng-if="vm.error" class="alert is-error" openlmis-message="vm.error" ng-show="vm.error"></div>
+    <div ng-if="vm.error" class="alert is-error" ng-show="vm.error">{{vm.error}}</div>
 </div>
