--- a/src/main/webapp/requisition-view/header.html
+++ b/src/main/webapp/requisition-view/header.html
@@ -9,7 +9,7 @@
   -->
 <aside class="requisition-info">
     <div class="requisition-type" ng-class="{'emergency': vm.requisition.emergency, 'regular': !vm.requisition.emergency}">
-        <span openlmis-message="vm.requisitionType"></span>
+        <span>{{'vm.requisitionType'}}</span>
     </div>
 
     <dl class="requisition-head-block">
