--- a/src/main/webapp/proof-of-delivery-view/header.html
+++ b/src/main/webapp/proof-of-delivery-view/header.html
@@ -14,7 +14,7 @@
         <dt>{{'label.supplyingDepot' | message}}</dt>
         <dd>{{vm.pod.order.supplyingFacility.name}}</dd>
         <dt>{{'label.reportingPeriod' | message}}</dt>
-        <dd>{{vm.periodDisplayName()}}</dd>
+        <dd>{{vm.pod.order.processingPeriod.startDate}} - {{vm.pod.order.processingPeriod.endDate}}</dd>
         <dt ng-if="vm.pod.order.facility.geographicZone.parent.name">{{'label.district' | message}}</dt>
         <dd ng-if="vm.pod.order.facility.geographicZone.parent.name">{{vm.pod.order.facility.geographicZone.parent.name}}</dd>
         <dt>{{'label.region' | message}}</dt>
