--- a/src/main/webapp/openlmis-home/home.html
+++ b/src/main/webapp/openlmis-home/home.html
@@ -1,8 +1,8 @@
 
 <div class="home-page">
   <h2>
-  	<em>{{'welcome.to.message' | message}}</em>
-  	<span>{{'label.logistics.management' | message}}</span>
-  	<span>{{'label.information.systems' | message}}</span>
+    <em>{{'welcome.to.message' | message}}</em>
+    <span>{{'title.logistics.management' | message}}</span>
+    <span>{{'title.information.systems' | message}}</span>
   </h2>
 </div>
